--- a/intl/uconv/tests/Makefile.in
+++ b/intl/uconv/tests/Makefile.in
@@ -498,6 +498,22 @@ test_bug335816
 .
 html
 \
+test_unicode_noncharacterescapes
+.
+html
+\
+test_unicode_noncharacters_gb18030
+.
+html
+\
+test_unicode_noncharacters_utf8
+.
+html
+\
+test_utf8_overconsumption
+.
+html
+\
 (
 NULL
 )
